Fix margins issue on mobile - Fixes #6

--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -33,7 +33,6 @@ article img {
     position: absolute;
     top: 50%;
     width: 100%;
-    padding-right: 30px;
     transform: translateY(-50%);
 }
 
@@ -48,7 +47,7 @@ article img {
 
 .slider-prev-next-control label:hover {
     opacity: 1;
-    cursor: hand;
+    cursor: pointer;
 }
 
 .slider-dot-control {
