--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,6 +365,17 @@ Blog
   opacity: 1;
 }
 
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+
+  > .col,
+  > [class*="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
 .blog-img {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05),
     0px 3px 4px -3px rgba(0, 0, 0, 0.2);
